data/derived/sp14/progs/unify/prog4127.ml.out
Characters 143-144:
  | Average (x,y)    -> (x+.y)/.2.0
                         ^
Error: This expression has type expr but an expression was expected of type
         float
